Mention rewrite branch.

--- a/README
+++ b/README
@@ -23,7 +23,7 @@ History
 
 *** NOTE THAT THIS VERSION OF TWISTY IS UNDER "MAINTEANCE MODE" ONLY.
 *** A REWRITE IS IN PROCESS TO USE NATIVE C CODE, ON A DIFFERENT
-*** MERCURIAL BRANCH.
+*** MERCURIAL BRANCH CALLED "REWRITE".
 
 
 This code began as a heavily-hacked port of 'zplet', an early
