--- a/README
+++ b/README
@@ -33,9 +33,8 @@ This should give us a 7x speed improvement, and also allow us to
 support a wider range of z-machines (via 'nitfol'), glulx games (via
 'glulxe') and perhaps even TADS or other interpreters.
 
-Specifically, we're using the GlkJNI project
-(http://code.google.com/p/glkjni) to provide an abstract UI to the
-various C interpreters.  GLK is a UI "abstraction layer" created by
+Specifically, we're using the GlkJNI layer to provide an abstract UI to 
+the various C interpreters.  GLK is a UI "abstraction layer" created by
 Andrew Plotkin which can be implemented in any GUI toolkit, and GlkJNI
 ports this abstraction to JNI via a set of java interfaces.  It then
 provides an Android-specific implementation of those interfaces.  The
@@ -97,7 +96,9 @@ A.  Prerequisites
  http://developer.android.com/sdk/ndk
 
  4. A copy of the Twisty codebase -- which you must already have if
- you're reading this.  (Say, at location $TWISTY.)
+ you're reading this.  (Say, at location $TWISTY.)  To work on the
+ 2.0 rewrite be sure you're looking at the DEFAULT mercurial branch:
+ run 'hg up -c DEFAULT' if unsure.
 
 
 B.  Code Overview
