Update README, separate build instructions into BUILD.

--- a/README
+++ b/README
@@ -1,11 +1,13 @@
          Twisty, a text-adventure interpreter for Android.
          =================================================
 
-What is this program?
----------------------
+Twisty is a game interpreter for the Android operating system.  It
+allaws you to play both classic and modern "text adventures" on your
+mobile device.
 
-Twisty is a game interpreter for the Android operating system.
-It allaws you to play "text adventures" on your mobile handset.
+You can find numerous games to download at http://ifarchive.org.  We
+also recommend visiting http://www.ifwiki.org for general information
+on Interactive Fiction.
 
 The z-machine is a virtual machine designed in 1979 by Infocom for
 playing text adventures, and it has been re-implemented on nearly every
@@ -13,9 +15,13 @@ computer and PDA since then.  This application allows Android users to
 play Infocom classics just as 'Zork', as well hundreds of newer text
 adventures written in the last ten years or so.
 
-You can find numerous z-machine games to download at
-http://ifarchive.org.  We also recommend visiting
-http://www.ifwiki.org for general information on Interactive Fiction.
+The glulx-machine is an modernized version of the z-machine capable of
+abstracted I/O, 32-bit operations, and other nifty things possible
+without ancient memory constraints.  Most modern text adventures
+written in Inform (www.inform7.com) create games of this type.
+
+Twisty is theoretically capable of identifying and playing both types
+of games.
 
 
 History
@@ -29,9 +35,9 @@ z-machine interpreter written for Java 1.0.
 
 We are now attempting to use Android's Native Development Kit (NDK) to
 make JNI calls to various VM-interpreters running as C libraries.
-This should give us a 7x speed improvement, and also allow us to
+This should give us a ~10x speed improvement, and also allow us to
 support a wider range of z-machines (via 'nitfol'), glulx games (via
-'glulxe') and perhaps even TADS or other interpreters.
+'git') and perhaps someday even TADS or other interpreters.
 
 Specifically, we're using the GlkJNI layer to provide an abstract UI to 
 the various C interpreters.  GLK is a UI "abstraction layer" created by
@@ -61,128 +67,29 @@ are merely interpreted and provided for convenience to users.)
 Patches are welcome!  Please mail us at twisty-dev@googlegroups.com.
 
 
-Installing the .apk
--------------------
+Installing the App
+---------------------
 
-The latest .apk can be downloaded directly from Google Code and pushed
-via 'adb install', or just grab it from Android Market.  :-) The .apk
-has a few sample games built in, but you can also load any z3, z5, or
-z8 came from the SDcard.
+IMPORTANT:
+
+The version of Twisty in Google Play Store is from 2009 -- it's built
+from a totally different codebase that is 100% Java and only
+understands 'z machine' games.  It's /not/ able to play most modern
+Inform-based glulx games (e.g. ones that end with .gblorb).
+
+The rewritten version of Twisty isn't yet suitable for release.  While
+it also knows how to play glulx games, it's still buggy and missing
+many features.  That said, if you're a techie who knows how to install
+apps directly (e.g. loading an .apk package via the 'adb install'
+command), then you can find the experimental app in the downloads area
+of this Bitbucket project:
+
+  https://bitbucket.org/sussman/twisty/downloads
+
 
 
 Building from Source
 --------------------
 
-** For Developers Only. Warning: this is a little complex!
+For developers contributing:  see the BUILD file.
 
-
-A.  Prerequisites
-
- 1. Android SDK and Eclipse setup. The easiest way to do this is with
-    the ADT bundle at http://developer.android.com/sdk. (You can add the
-    Android Developer tools to an existing Eclipse install as well, if
-    you are so determined. See the instructions on that page about
-    installing the ADT plugin from within Eclipse).
-
- 2. The Android Native Development Kit (NDK) -- at least version r9c --
-    from http://developer.android.com/tools/sdk/ndk. Download and
-    unpack the NDK somewhere (call it $NDK). This is the GCC toolchain
-    to cross-compile for Android ARM/x86/MIPS chips (we're using ARM).
-
- 3. NDK plugin for Eclipse. This will allow you to build the native
-    code right from Eclipse rather than as a separate command line
-    step, and also enables useful functionality like Eclipse debugger
-    integration. Launch Eclipse > Help > Install New Software... and
-    set the source to Work With "Android Developer Tools Update Site".
-    Check the box next to NDK Plugins and then click the "Next >"
-    button at the bottom, agree to the license, and install.
-    Note that it might appear to hang for ~5 minutes while
-    "Calculating requirements and dependencies". After it finishes,
-    you'll need to restart the ADT.
-    (More about configuring the NDK to build your Twisty project below
-    under Building the code).
-
- 4. A copy of the Twisty codebase -- which you must already have
-    if you're reading this.  (Say, at location $TWISTY.)  To work on
-    the 2.0 rewrite be sure you're looking at the DEFAULT mercurial
-    branch: run 'hg up -c DEFAULT' if unsure.
-
-
-B.  Code Overview
-
-The Twisty codebase contains the main Twisty "activity", a few sample
-games, and some C interpreters that expect to use GLK for I/O.  The
-Twisty activity is essentially a high-level consumer of GlkJNI.
-
-The GlkJNI codebase contains 'glkjni' (the C code implementing
-a trampoline to Java), as well as specific java
-implementations of these interfaces. The one we care about is
-'roboglk', which maps the interfaces to Android's UI.
-
-
-C.  Building the code
-
-Fire up Eclipse, and make sure you have the latest ADT installed at
-pointed at your Android SDK directory.
-
- 1. Start a new "generic project" and choose "Android project".  In
-    the following dialog box, choose "based on existing source" and
-    then select $TWISTY/twisty/.
-
- 2. Now open the project's properties (Project->Properties) and choose
-    "Java Build Path" from the list on the left.  Then choose the
-    'Source' tab and press the 'Link Source' button.  Navigate to the
-    'roboglk' directory at the top of twisty tree and and select that.
-    It should now appear in the list with $TWISTY/src and
-    $TWISTY/gen. Now select the 'Order and Export' tab and arrange the
-    build class order from top to bottom as Twisty/roboglk,
-    Twisty/src, Twisty/gen, and Android 4.4.  The box next to Android
-    4.4 should be checked.
-
- 3. In the same Project->Properties panel, choose 'Java Compiler' and
-    make sure it's set to Java compliance level 1.6.
- 
- 4. To make the Native (C) code happy, you'll need to:
-    A. Eclipse > Window > Preferences > Android > NDK >
-       set path to the NDK and fill in your $NDK path
-    B. right-click on the toplevel Twisty project and choose
-       Android Tools > Add Native Support
-    C. If you plan on debugging Native (C) code, add NDK_DEBUG=1
-       to the native build command in
-       Project->Properties->C/C++ Build.
-       It should say "ndk-build NDK_DEBUG=1"
-       (If you change this, do a Project>Clean...>Clean all projects
-       and rebuild).
-
-D.  Running Twisty in the Android Virtual Device (AVD)
-
- 1. Twisty should now build correctly. To run it in an AVD, you must first
-    configure an AVD. This can be done through the menu Window->Android SDK
-    and AVD manager. Select 'Virtual devices' on the left, then press the
-    'New' button to create a new entry. Add a name and specify the target as 
-    'Android 2.1 - API level 7'. For SD card, you can make a new, blank card
-    by just indicating the size, e.g., 64M. Finally, choose a skin. You may
-    make more than one AVD. 
-
- 2. To specify the AVD to run, select Run->Run Configuration. Select the 
-    'target' tab, and then check the box next to your choice of AVD.
-
- 3. Select 'Run'. The emulator should launch, report mounting of the SDcard,
-    and then begin the Twisty activity.
-
-
-E. Debugging Twisty Native code
-
-With the NDK plugin configured, you can debug C code within eclipse,
-on both the emulator (AVD) and a real device!
-
- 1. Run > Debug Configurations... and choose Android Native App. Create a
-    new one and name it Twisty Native or something.
- 
- 2. Make sure you set NDK_DEBUG=1 in the C/C++ build option (see the Building
-    the code section above). (TODO: There might be a slicker way to do this
-    with Eclipse variables).
-    
- 3. Run your debug configuration; it's just Eclipse CDT so you can set
-    breakpoints, inspect the stack and variables, etc., like any other
-    C/C++ application.
